--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,8 @@ utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
 utoipa-swagger-ui = { version = "7", features = ["axum"] }
 
 # MARC parsing (for Z39.50 records)
-encoding_rs = "0.8"
+marc-rs = "0.1.3"
+z3950-rs = "0.2.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
