--- a/docker-compose.complete.yml
+++ b/docker-compose.complete.yml
@@ -10,21 +10,9 @@ services:
       - "${API_PORT:-8282}:8080"
       - "${GUI_PORT:-8181}:80"
     environment:
-      # Database configuration
-      - DATABASE_URL=${DATABASE_URL:-postgres://elidune:elidune@localhost:5432/elidune}
-      - POSTGRES_USER=${POSTGRES_USER:-elidune}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-elidune}
-      - POSTGRES_DB=${POSTGRES_DB:-elidune}
-      # Redis configuration
-      - REDIS_URL=${REDIS_URL:-redis://127.0.0.1:6379}
-      # JWT and security
-      - JWT_SECRET=${JWT_SECRET:-change-this-secret-in-production}
-      # Logging
-      - RUST_LOG=${RUST_LOG:-elidune_server=info,tower_http=info}
-      # Server configuration
-      - ELIDUNE_SERVER_HOST=${ELIDUNE_SERVER_HOST:-0.0.0.0}
-      - ELIDUNE_SERVER_PORT=${ELIDUNE_SERVER_PORT:-8080}
+     
     volumes:
+      - /etc/elidune/config:/app/config
       - postgres_data:/var/lib/postgresql/data
       - redis_data:/data
     restart: unless-stopped
